reverted from css style to property of table cell to ensure alignment rendered properly

--- a/src/components/recipes/Recipes.css
+++ b/src/components/recipes/Recipes.css
@@ -28,7 +28,3 @@
 .recipeTable{
    min-width: 500px;
 }
-
-.recipeTableCell{
-    text-align: right;
-}
